--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-rate-limit": "^8.1.0",
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
+    "nodemailer": "^7.0.9",
     "zxcvbn": "^4.4.2"
   }
 }
